add loader component (css3 loading animation)

--- a/src/app/components/modal/style.css
+++ b/src/app/components/modal/style.css
@@ -9,7 +9,7 @@
 }
 .compModalOverlay {
     position: absolute;
-    background-color: #000;
+    background-color: #ccc;
     opacity: 0.4;
 }
 .compModalWrap {
