--- a/src/app/components/modal/style.css
+++ b/src/app/components/modal/style.css
@@ -9,8 +9,8 @@
 }
 .compModalOverlay {
     position: absolute;
-    background-color: #ccc;
-    opacity: 0.4;
+    background-color: #333;
+    opacity: 0.6;
 }
 .compModalWrap {
     position: absolute;
@@ -26,15 +26,17 @@
     -moz-border-radius: 0.5rem;
     border-radius: 0.5rem;
     min-height: 10rem;
-    margin: 0 auto;
-    top: 10rem;
+    margin: -20rem auto 0 auto;
+    top:50%;
     width: 30rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.65);
-    transition: width 0.3s, height 0.3s, min-height 0.3s;
-    -webkit-transition: width 0.3s, height 0.3s, min-height 0.3s;
+    opacity:0;
+    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
 }
 .compModalActive {
     width: 50rem;
+    opacity:1;
 }
 .compModalContent {
     opacity: 0;
