replace alert/confirmation popups in anlaysis to alert component

--- a/src/app/components/analysis/template.html
+++ b/src/app/components/analysis/template.html
@@ -17,6 +17,9 @@
                         <% });} %>
                 </select>
             </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
+            </div>
         </div>
         <div class="row">
             <div class="col col-3">
@@ -27,6 +30,9 @@
             <div class="col col-4 wrap-mandatory wrap-date">
                 <input type="text" name="DateAssessed" class="full-width date-field" readonly>
             </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
+            </div>
         </div>
         <div class="row">
             <div class="col col-3">
@@ -34,8 +40,11 @@
                     Risk Assessor:
                 </label>
             </div>
-            <div class="col col-9 wrap-mandatory wrap-find">
+            <div class="col col-8 wrap-mandatory wrap-find">
                 <input type="text" name="AssessorName" data-keyup class="full-width">
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
         </div>
         <div class="row">
@@ -44,8 +53,11 @@
                     Assessment Team:
                 </label>
             </div>
-            <div class="col col-9 wrap-mandatory wrap-find bottom wrap-assessment-team">
+            <div class="col col-8 wrap-mandatory wrap-find bottom wrap-assessment-team">
                 <textarea name="AssessmentTeam" class="full-width" data-keyup rows="6"></textarea>
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
         </div>
         <div class="row">
