replace alert/confirm in note with alert component

--- a/src/app/components/note/template.html
+++ b/src/app/components/note/template.html
@@ -6,9 +6,9 @@
                 <label>
                     Note Type:</label>
             </div>
-            <div class="col col-4">
+            <div class="col col-3">
                 <select name="NoteTypeID" class="full-width">
-                    <option value="0">-- select a note type --</option>
+                    <option value="0">--</option>
                     <% if(this.refData && this.refData.NoteTypes && this.refData.NoteTypes.length>0){_.each(this.refData.NoteTypes, function(item){ %>
                         <option value="<%=item.id %>">
                             <%=item.desc || '' %>
@@ -16,13 +16,16 @@
                         <%});} %>
                 </select>
             </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
+            </div>
             <div class="col col-2">
                 <label>
                     Status:</label>
             </div>
-            <div class="col col-4">
+            <div class="col col-3">
                 <select name="NoteStatusID" class="full-width">
-                    <option value="0">-- select a note status --</option>
+                    <option value="0">--</option>
                     <% if(this.refData && this.refData.NoteStatuses && this.refData.NoteStatuses.length>0){_.each(this.refData.NoteStatuses, function(item){ %>
                         <option value="<%=item.id %>">
                             <%=item.desc || '' %>
@@ -30,29 +33,41 @@
                         <%});} %>
                 </select>
             </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
+            </div>
         </div>
         <div class="row">
             <div class="col col-2">
                 <label>
                     Raised By:</label>
             </div>
-            <div class="col col-4">
+            <div class="col col-3">
                 <input name="RaisedBy" type="text" class="full-width" />
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
             <div class="col col-2">
                 <label>
                     Date Raised:</label>
             </div>
-            <div class="col col-4">
+            <div class="col col-3">
                 <input name="DateRaised" type="text" class="full-width date-field" readonly />
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
         </div>
         <div class="row">
             <label class="col col-2">
                 Comment
             </label>
-            <div class="col">
+            <div class="col col-9">
                 <textarea name="Comment" class="full-width" rows="5"></textarea>
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
         </div>
     </fieldset>
