replace alert/confirm in assessment factor components with alert component.

--- a/src/app/components/assessment/template.html
+++ b/src/app/components/assessment/template.html
@@ -5,22 +5,28 @@
             <div class="col col-8">
                 Do fires occur frequently?
             </div>
-            <div class="col col-4 radio-group">
+            <div class="col col-3 radio-group">
                 <label>
                     <input name="IsFrequent" value="false" type="radio">No</label>
                 <label>
                     <input name="IsFrequent" value="true" type="radio">Yes</label>
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
         </div>
         <div class="row">
             <div class="col col-8">
                 If a fire occurs, is it expected to reach the asset?
             </div>
-            <div class="col col-4 radio-group">
+            <div class="col col-3 radio-group">
                 <label>
                     <input name="IsExpectedToSpread" value="false" type="radio">No</label>
                 <label>
                     <input name="IsExpectedToSpread" value="true" type="radio">Yes</label>
+            </div>
+            <div class="col col-1">
+                <i class="fa fa-asterisk required"></i>
             </div>
         </div>
     </fieldset>
