--- a/src/app/components/note/tmplList.html
+++ b/src/app/components/note/tmplList.html
@@ -1,4 +1,4 @@
-﻿<div class="compNoteList">
+<div class="compNoteList">
     <div class="row">
         <div class="col">
             <table class="compNoteListTable full-width">
